--- a/Dindin Rizky/index.html
+++ b/Dindin Rizky/index.html
@@ -80,7 +80,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Fresh Graduate Teknik Informatika dari Institut Digital ekonomi LPKIA dengan pengalaman magang sebagai database administator. terlatih dalam menggunakan Mysql. Berdedikasi untuk menjadi Proggrammer Tokopedia.com dan siap untuk bekerja dalam bidang apa pun.</p>
+          <p>Saya adalah seorang Fresh Graduate Teknik Informatika dari Institut Digital ekonomi LPKIA dengan pengalaman magang sebagai Staff admin dan assistant IT Support. Saya terlatih dalam menggunakan Microsoft Office dan siap untuk bekerja dalam bidang apa pun. Berdedikasi untuk menjadi bagian perusahaan, saya siap untuk
+          mengambil tantangan dan pengembangan keterampilan saya. Dengan kemauan kuat untuk mencoba hal-hal baru dan mengambil tantangan. Saya juga aktif dalam organisasi, serta menjadi wakil ketua di UKM Taekwondo.</p>
         </div>
 
         <div class="row">
